# atlas

./: .gitattributes  LICENSE  Makefile  README.md  setup.cfg
devconfig/: pre-commit.sh
src/atlas/: __init__.py  db.py  encoding.py
test/: test_db.py  test_encoding.py
testdata/leveldbs/alerts.db.5k/: meta.json
testdata/leveldbs/alerts.db.5k/candidates/: 000002.ldb  000009.ldb  000012.ldb  000015.ldb  CURRENT  LOG  MANIFEST-000017
testdata/leveldbs/alerts.db.5k/healpixels/: 000016.ldb  000017.ldb  LOG  MANIFEST-000019
testdata/leveldbs/alerts.db.5k/objects/: 000020.ldb  CURRENT  LOG  MANIFEST-000019
testdata/leveldbs/alerts.db.5k/timestamps/: 000018.ldb  LOG  MANIFEST-000017
