[metadata]
name = atlas
version = 0.0.1-alpha
description = Atlas Two-Level Alert Search
long_description = file: README.md
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
author = Spencer Nelson
author_email = swnelson@uw.edu

[options]
package_dir=
    =src
packages=find:
install_requires =
    healpy==1.14.0
    plyvel==1.3.0

[options.extras_require]
dev = flake8; black; mypy

[options.packages.find]
where=src
